--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,12 +30,30 @@ dist.jar=${dist.dir}/Shoreline.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.fontawesomefx-8.9.jar=fontawesomefx-8.9.jar
+file.reference.jfoenix-8.0.1.jar=jfoenix-8.0.1.jar
+file.reference.poi-3.17.jar=poi-3.17.jar
+file.reference.poi-examples-3.17.jar=poi-examples-3.17.jar
+file.reference.poi-excelant-3.17.jar=poi-excelant-3.17.jar
+file.reference.poi-ooxml-3.17.jar=poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=poi-ooxml-schemas-3.17.jar
+file.reference.poi-scratchpad-3.17.jar=poi-scratchpad-3.17.jar
+file.reference.sqljdbc42.jar=sqljdbc42.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.fontawesomefx-8.9.jar}:\
+    ${file.reference.jfoenix-8.0.1.jar}:\
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-examples-3.17.jar}:\
+    ${file.reference.poi-excelant-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.poi-scratchpad-3.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +96,7 @@ javafx.enable.concurrent.external.runs=false
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
 # Main class for JavaFX
-javafx.main.class=shoreline.Shoreline
+javafx.main.class=shoreline.BE.Main
 javafx.preloader.class=
 # This project does not use Preloader
 javafx.preloader.enabled=false
