--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,11 @@ dist.jar=${dist.dir}/Shoreline.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-io-2.6-javadoc.jar=commons-io-2.6-javadoc.jar
+file.reference.commons-io-2.6-sources.jar=commons-io-2.6-sources.jar
+file.reference.commons-io-2.6-test-sources.jar=commons-io-2.6-test-sources.jar
+file.reference.commons-io-2.6-tests.jar=commons-io-2.6-tests.jar
+file.reference.commons-io-2.6.jar=commons-io-2.6.jar
 file.reference.fontawesomefx-8.9.jar=fontawesomefx-8.9.jar
 file.reference.jfoenix-8.0.1.jar=jfoenix-8.0.1.jar
 file.reference.poi-3.17.jar=poi-3.17.jar
@@ -53,7 +58,12 @@ javac.classpath=\
     ${file.reference.poi-excelant-3.17.jar}:\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
-    ${file.reference.poi-scratchpad-3.17.jar}
+    ${file.reference.poi-scratchpad-3.17.jar}:\
+    ${file.reference.commons-io-2.6-javadoc.jar}:\
+    ${file.reference.commons-io-2.6-sources.jar}:\
+    ${file.reference.commons-io-2.6-test-sources.jar}:\
+    ${file.reference.commons-io-2.6-tests.jar}:\
+    ${file.reference.commons-io-2.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
