--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,17 @@ dist.jar=${dist.dir}/Shoreline.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.1-javadoc.jar=commons-collections4-4.1-javadoc.jar
+file.reference.commons-collections4-4.1.jar=commons-collections4-4.1.jar
 file.reference.commons-io-2.6-javadoc.jar=commons-io-2.6-javadoc.jar
 file.reference.commons-io-2.6-sources.jar=commons-io-2.6-sources.jar
 file.reference.commons-io-2.6-test-sources.jar=commons-io-2.6-test-sources.jar
 file.reference.commons-io-2.6-tests.jar=commons-io-2.6-tests.jar
 file.reference.commons-io-2.6.jar=commons-io-2.6.jar
+file.reference.curvesapi-1.04.jar=curvesapi-1.04.jar
 file.reference.fontawesomefx-8.9.jar=fontawesomefx-8.9.jar
 file.reference.jfoenix-8.0.1.jar=jfoenix-8.0.1.jar
+file.reference.json-simple-1.1.1.jar=json-simple-1.1.1.jar
 file.reference.poi-3.17.jar=poi-3.17.jar
 file.reference.poi-examples-3.17.jar=poi-examples-3.17.jar
 file.reference.poi-excelant-3.17.jar=poi-excelant-3.17.jar
@@ -44,6 +48,7 @@ file.reference.poi-ooxml-3.17.jar=poi-ooxml-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar=poi-ooxml-schemas-3.17.jar
 file.reference.poi-scratchpad-3.17.jar=poi-scratchpad-3.17.jar
 file.reference.sqljdbc42.jar=sqljdbc42.jar
+file.reference.xmlbeans-2.6.0.jar=xmlbeans-2.6.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -63,7 +68,12 @@ javac.classpath=\
     ${file.reference.commons-io-2.6-sources.jar}:\
     ${file.reference.commons-io-2.6-test-sources.jar}:\
     ${file.reference.commons-io-2.6-tests.jar}:\
-    ${file.reference.commons-io-2.6.jar}
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1-javadoc.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
