--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,6 +40,7 @@ file.reference.commons-io-2.6.jar=commons-io-2.6.jar
 file.reference.curvesapi-1.04.jar=curvesapi-1.04.jar
 file.reference.fontawesomefx-8.9.jar=fontawesomefx-8.9.jar
 file.reference.jfoenix-8.0.1.jar=jfoenix-8.0.1.jar
+file.reference.json-20180130.jar=json-20180130.jar
 file.reference.json-simple-1.1.1.jar=json-simple-1.1.1.jar
 file.reference.poi-3.17.jar=poi-3.17.jar
 file.reference.poi-examples-3.17.jar=poi-examples-3.17.jar
@@ -73,7 +74,8 @@ javac.classpath=\
     ${file.reference.xmlbeans-2.6.0.jar}:\
     ${file.reference.commons-collections4-4.1-javadoc.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.json-20180130.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
