auto complete textfield + controlsfx + Header name

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,6 +37,8 @@ file.reference.commons-io-2.6-sources.jar=commons-io-2.6-sources.jar
 file.reference.commons-io-2.6-test-sources.jar=commons-io-2.6-test-sources.jar
 file.reference.commons-io-2.6-tests.jar=commons-io-2.6-tests.jar
 file.reference.commons-io-2.6.jar=commons-io-2.6.jar
+file.reference.controlsfx-8.40.12.jar=C:\\Users\\Kent Juul\\Downloads\\controlsfx-8.40.12.jar
+file.reference.controlsfx-9.0.0.jar=controlsfx-9.0.0.jar
 file.reference.curvesapi-1.04.jar=curvesapi-1.04.jar
 file.reference.fontawesomefx-8.9.jar=fontawesomefx-8.9.jar
 file.reference.jfoenix-8.0.1.jar=jfoenix-8.0.1.jar
@@ -55,7 +57,6 @@ includes=**
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
     ${file.reference.fontawesomefx-8.9.jar}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
     ${file.reference.sqljdbc42.jar}:\
@@ -75,7 +76,10 @@ javac.classpath=\
     ${file.reference.commons-collections4-4.1-javadoc.jar}:\
     ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.json-simple-1.1.1.jar}:\
-    ${file.reference.json-20180130.jar}
+    ${file.reference.json-20180130.jar}:\
+    ${file.reference.controlsfx-9.0.0.jar}:\
+    ${javafx.classpath.extension}:\
+    ${file.reference.controlsfx-8.40.12.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
