--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,5 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -37,7 +36,7 @@ file.reference.commons-io-2.6-sources.jar=commons-io-2.6-sources.jar
 file.reference.commons-io-2.6-test-sources.jar=commons-io-2.6-test-sources.jar
 file.reference.commons-io-2.6-tests.jar=commons-io-2.6-tests.jar
 file.reference.commons-io-2.6.jar=commons-io-2.6.jar
-file.reference.controlsfx-8.40.12.jar=C:\\Users\\Kent Juul\\Downloads\\controlsfx-8.40.12.jar
+file.reference.controlsfx-8.40.12.jar=controlsfx-8.40.12.jar
 file.reference.controlsfx-9.0.0.jar=controlsfx-9.0.0.jar
 file.reference.curvesapi-1.04.jar=curvesapi-1.04.jar
 file.reference.fontawesomefx-8.9.jar=fontawesomefx-8.9.jar
@@ -83,6 +82,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -144,6 +144,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
