--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,9 +40,11 @@ file.reference.controlsfx-8.40.12.jar=controlsfx-8.40.12.jar
 file.reference.controlsfx-9.0.0.jar=controlsfx-9.0.0.jar
 file.reference.curvesapi-1.04.jar=curvesapi-1.04.jar
 file.reference.fontawesomefx-8.9.jar=fontawesomefx-8.9.jar
+file.reference.hamcrest-core-1.3.jar=hamcrest-core-1.3.jar
 file.reference.jfoenix-8.0.1.jar=jfoenix-8.0.1.jar
 file.reference.json-20180130.jar=json-20180130.jar
 file.reference.json-simple-1.1.1.jar=json-simple-1.1.1.jar
+file.reference.junit-4.12.jar=junit-4.12.jar
 file.reference.poi-3.17.jar=poi-3.17.jar
 file.reference.poi-examples-3.17.jar=poi-examples-3.17.jar
 file.reference.poi-excelant-3.17.jar=poi-excelant-3.17.jar
@@ -78,7 +80,9 @@ javac.classpath=\
     ${file.reference.json-20180130.jar}:\
     ${file.reference.controlsfx-9.0.0.jar}:\
     ${javafx.classpath.extension}:\
-    ${file.reference.controlsfx-8.40.12.jar}
+    ${file.reference.controlsfx-8.40.12.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -91,7 +95,9 @@ javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
     ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${libs.hamcrest.classpath}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -154,7 +160,9 @@ run.classpath=\
     ${build.classes.dir}
 run.test.classpath=\
     ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+    ${build.test.classes.dir}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.hamcrest-core-1.3.jar}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
